Another correction to try to get the tabs to not wrap when compiled

--- a/src/companion/assets/css/app.styl
+++ b/src/companion/assets/css/app.styl
@@ -21,8 +21,7 @@
 }
 
 @media (max-width: 767px) {
-
-  .nav-tabs > li > a {
+  .mobile .nav-tabs > li > a {
     padding: 10px 10px;
   }
 }
